{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 40,
  "lineage": "1442f659-6975-6a73-4992-ef495391e357",
  "resources": [
    {
      "module": "module.natgw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e5f32442ba1bc8",
            "connectivity_type": "public",
            "id": "nat-05c10637e5e40e1d5",
            "network_interface_id": "eni-02b33873dcc14c967",
            "private_ip": "172.16.1.56",
            "public_ip": "52.41.39.237",
            "subnet_id": "subnet-0f31e18eeb98f488f"
          },
          "dependencies": [
            "module.subnet_public_1.aws_subnet.public",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_association_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031e5cb08ca44e3a1",
            "route_table_id": "rtb-0b704f3169b8c1517",
            "subnet_id": "subnet-0222b0608885717c0"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.RT-Dev-Private",
            "module.subnet_private_1.aws_subnet.private",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_association_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb2e3b1eb76c381",
            "route_table_id": "rtb-0b704f3169b8c1517",
            "subnet_id": "subnet-0b591cc13dcb7a413"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.RT-Dev-Private",
            "module.subnet_private_2.aws_subnet.private",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-Dev-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:route-table/rtb-0b704f3169b8c1517",
            "id": "rtb-0b704f3169b8c1517",
            "owner_id": "961840024440",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT-Dev-Private"
            },
            "tags_all": {
              "Name": "RT-Dev-Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_association_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096d4b266e3788318",
            "route_table_id": "rtb-0316bbde4b7f1820c",
            "subnet_id": "subnet-0f31e18eeb98f488f"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.RT-Dev-Public",
            "module.subnet_public_1.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_association_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef4e921d720c76c",
            "route_table_id": "rtb-0316bbde4b7f1820c",
            "subnet_id": "subnet-01ff551f5595a9cd4"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.RT-Dev-Public",
            "module.subnet_public_2.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-Dev-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:route-table/rtb-0316bbde4b7f1820c",
            "id": "rtb-0316bbde4b7f1820c",
            "owner_id": "961840024440",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "RT-Dev-Public"
            },
            "tags_all": {
              "Name": "RT-Dev-Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_to_igw",
      "mode": "managed",
      "type": "aws_route",
      "name": "gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-089c7143fe04b87a9",
            "id": "r-rtb-0316bbde4b7f1820c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0316bbde4b7f1820c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.RT-Dev-Public",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_to_ngw",
      "mode": "managed",
      "type": "aws_route",
      "name": "gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b704f3169b8c15171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c10637e5e40e1d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b704f3169b8c1517",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.natgw.aws_nat_gateway.nat",
            "module.private_route_table.aws_route_table.RT-Dev-Private",
            "module.subnet_public_1.aws_subnet.public",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:subnet/subnet-0222b0608885717c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0222b0608885717c0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961840024440",
            "tags": {
              "Name": "dev-priv-subnet-1"
            },
            "tags_all": {
              "Name": "dev-priv-subnet-1"
            },
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:subnet/subnet-0b591cc13dcb7a413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.4.0/24",
            "id": "subnet-0b591cc13dcb7a413",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961840024440",
            "tags": {
              "Name": "dev-priv-subnet-2"
            },
            "tags_all": {
              "Name": "dev-priv-subnet-2"
            },
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:subnet/subnet-0f31e18eeb98f488f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0f31e18eeb98f488f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961840024440",
            "tags": {
              "Name": "dev-pub-subnet-1"
            },
            "tags_all": {
              "Name": "dev-pub-subnet-1"
            },
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:subnet/subnet-01ff551f5595a9cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-01ff551f5595a9cd4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961840024440",
            "tags": {
              "Name": "dev-pub-subnet-2"
            },
            "tags_all": {
              "Name": "dev-pub-subnet-2"
            },
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e5f32442ba1bc8",
            "domain": "vpc",
            "id": "eipalloc-001e5f32442ba1bc8",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-41-39-237.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.39.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:internet-gateway/igw-089c7143fe04b87a9",
            "id": "igw-089c7143fe04b87a9",
            "owner_id": "961840024440",
            "tags": {
              "Name": "IGW-Dev"
            },
            "tags_all": {
              "Name": "IGW-Dev"
            },
            "vpc_id": "vpc-08f4db13a84963c28"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961840024440:vpc/vpc-08f4db13a84963c28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0604c9cd60af60271",
            "default_route_table_id": "rtb-0231beb64cab40199",
            "default_security_group_id": "sg-0425ca0bc271e081f",
            "dhcp_options_id": "dopt-42655f3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08f4db13a84963c28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0231beb64cab40199",
            "owner_id": "961840024440",
            "tags": {
              "Name": "Dev-VPC"
            },
            "tags_all": {
              "Name": "Dev-VPC"
            }
          }
        }
      ]
    }
  ]
}